// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`monorepo > some-scope-package-one.cjs.js 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.js
var src_default = 1;
//#endregion
exports.default = src_default;
"
`;

exports[`monorepo > some-scope-package-one.esm.js 1`] = `
"//#region src/index.js
var src_default = 1;
//#endregion
export { src_default as default };
"
`;

exports[`monorepo > some-scope-package-two.cjs.js 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.js
var src_default = 2;
//#endregion
exports.default = src_default;
"
`;

exports[`monorepo > some-scope-package-two.esm.js 1`] = `
"//#region src/index.js
var src_default = 2;
//#endregion
export { src_default as default };
"
`;

exports[`monorepo single package > some-scope-package-two-single-package.cjs.js 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.js
var src_default = 2;
//#endregion
exports.default = src_default;
"
`;

exports[`monorepo single package > some-scope-package-two-single-package.esm.js 1`] = `
"//#region src/index.js
var src_default = 2;
//#endregion
export { src_default as default };
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-four-umd-with-dep.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
require("@some-scope/package-one-umd-with-dep");
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-four-umd-with-dep.umd.min.js 1`] = `
"(function(e,t){typeof exports==\`object\`&&typeof module<\`u\`?t(require("react")):typeof define==\`function\`&&define.amd?define([\`react\`],t):(e=typeof globalThis<\`u\`?globalThis:e||self,t(e.React))})(this,function(e){(0,e.createElement)(\`div\`,null)});
//# sourceMappingURL=some-scope-package-four-umd-with-dep.umd.min.js.map//# sourceMappingURL=some-scope-package-four-umd-with-dep.umd.min.js.map
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-four-umd-with-dep.umd.min.js.map 1`] = `"{"version":3,"file":"some-scope-package-four-umd-with-dep.umd.min.js","names":["createElement"],"sources":["../../package-one/src/index.js"],"sourcesContent":["import { createElement } from \\"react\\";\\n\\ncreateElement(\\"div\\", null);"],"mappings":"qNAEAA,EAAAA,EAAAA,cAAAA,CAAc,MAAO,IAAI"}"`;

exports[`monorepo umd with dep on other module > some-scope-package-one-umd-with-dep.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.js
(0, require("react").createElement)("div", null);
//#endregion
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-one-umd-with-dep.umd.min.js 1`] = `
"(function(e,t){typeof exports==\`object\`&&typeof module<\`u\`?t(require("react")):typeof define==\`function\`&&define.amd?define([\`react\`],t):(e=typeof globalThis<\`u\`?globalThis:e||self,t(e.React))})(this,function(e){(0,e.createElement)(\`div\`,null)});
//# sourceMappingURL=some-scope-package-one-umd-with-dep.umd.min.js.map//# sourceMappingURL=some-scope-package-one-umd-with-dep.umd.min.js.map
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-one-umd-with-dep.umd.min.js.map 1`] = `"{"version":3,"file":"some-scope-package-one-umd-with-dep.umd.min.js","names":["createElement"],"sources":["../src/index.js"],"sourcesContent":["import { createElement } from \\"react\\";\\n\\ncreateElement(\\"div\\", null);"],"mappings":"qNAEAA,EAAAA,EAAAA,cAAAA,CAAc,MAAO,IAAI"}"`;

exports[`monorepo umd with dep on other module > some-scope-package-three-umd-with-dep.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
require("@some-scope/package-one-umd-with-dep");
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-three-umd-with-dep.umd.min.js 1`] = `"(function(e,t){typeof exports==\`object\`&&typeof module<\`u\`?t(require("@some-scope/package-one-umd-with-dep")):typeof define==\`function\`&&define.amd?define([\`@some-scope/package-one-umd-with-dep\`],t):(e=typeof globalThis<\`u\`?globalThis:e||self,t(e.packageOne))})(this,function(e){});"`;

exports[`monorepo umd with dep on other module > some-scope-package-two-umd-with-dep.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.js
(0, require("react").createElement)("h1", null);
//#endregion
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-two-umd-with-dep.umd.min.js 1`] = `
"(function(e,t){typeof exports==\`object\`&&typeof module<\`u\`?t(require("react")):typeof define==\`function\`&&define.amd?define([\`react\`],t):(e=typeof globalThis<\`u\`?globalThis:e||self,t(e.React))})(this,function(e){(0,e.createElement)(\`h1\`,null)});
//# sourceMappingURL=some-scope-package-two-umd-with-dep.umd.min.js.map//# sourceMappingURL=some-scope-package-two-umd-with-dep.umd.min.js.map
"
`;

exports[`monorepo umd with dep on other module > some-scope-package-two-umd-with-dep.umd.min.js.map 1`] = `"{"version":3,"file":"some-scope-package-two-umd-with-dep.umd.min.js","names":["createElement"],"sources":["../src/index.js"],"sourcesContent":["import { createElement } from \\"react\\";\\n\\ncreateElement(\\"h1\\", null);"],"mappings":"qNAEAA,EAAAA,EAAAA,cAAAA,CAAc,KAAM,IAAI"}"`;

exports[`no module > no-module.cjs.js 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.js
var src_default = "this does not have a module build";
//#endregion
exports.default = src_default;
"
`;

exports[`preserves process.env.NODE_ENV checks > prod-checks.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.js
function thing() {
	if (process.env.NODE_ENV !== "production") return "not prod";
	return "prod";
}
//#endregion
exports.thing = thing;
"
`;

exports[`umd with dep on other module > umd-with-dep.cjs.js 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.js
(0, require("react").createElement)("div", null);
//#endregion
"
`;

exports[`umd with dep on other module > umd-with-dep.umd.min.js 1`] = `
"(function(e,t){typeof exports==\`object\`&&typeof module<\`u\`?t(require("react")):typeof define==\`function\`&&define.amd?define([\`react\`],t):(e=typeof globalThis<\`u\`?globalThis:e||self,t(e.React))})(this,function(e){(0,e.createElement)(\`div\`,null)});
//# sourceMappingURL=umd-with-dep.umd.min.js.map//# sourceMappingURL=umd-with-dep.umd.min.js.map
"
`;

exports[`umd with dep on other module > umd-with-dep.umd.min.js.map 1`] = `"{"version":3,"file":"umd-with-dep.umd.min.js","names":["createElement"],"sources":["../src/index.js"],"sourcesContent":["import { createElement } from \\"react\\";\\n\\ncreateElement(\\"div\\", null);"],"mappings":"qNAEAA,EAAAA,EAAAA,cAAAA,CAAc,MAAO,IAAI"}"`;
